# lexis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
src/: main.py
src/cogs/: admin.py  ai.py  basic.py  nlp.py  tasks.py
src/config/: settings.py
src/utils/: ai_client.py  helpers.py  nlp_processor.py
