[project]
name = "lexis"
version = "0.1.0"
description = "ðŸ—£ï¸ A human-like question-answering Discord bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
]
